--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
 
-minecraft { //14.23.0.2512
-    version = "1.12.2-14.23.5.2768"
+minecraft { 
+    version = "1.12.2-14.23.0.2512"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -29,7 +29,7 @@ minecraft { //14.23.0.2512
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20171003"
+    mappings = "snapshot_20171010"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
